# llm-finetune

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLEANUP_GUIDE.md  CODE_OF_CONDUCT.md  COLAB_QUICKSTART.md  CONTRIBUTING.md  DIAGRAMS.md  DOWNLOAD_FROM_RUNPOD.md  Dockerfile  LICENSE  MERGE_GUIDE.md  MERGE_LOCAL_WINDOWS.md  MERGE_WORKFLOW.md  Makefile  README.md  RUNPOD_GUIDE.md  merge.bat  pyproject.toml
.claude/: settings.local.json
configs/: default.yaml  existing_jsonl.yaml  existing_jsonl_colab.yaml  existing_jsonl_skip_prep.yaml  json_sft.yaml  pdf_causal_lm.yaml  qa_generation.yaml  vedic_astrology.yaml
docs/: COLAB_GUIDE.md  COLAB_QUICKSTART_CELL.md  MODEL_GUIDE.md  PHASE1_SETUP.md  PHASE2_DATA_PREPARATION.md  PHASE3_TRAINING.md  PHASE4_EVALUATION.md  PHASE5_DEPLOYMENT.md  PHASE_COLAB.md  README.md  TROUBLESHOOTING.md  USING_EXISTING_JSONL.md
notebooks/: llm_finetune_colab.ipynb
scripts/: colab_finetune.py  create_sample_data.py  merge.sh  merge_local.py  merge_model.py  runpod.sh  runpod_auto_setup.sh  runpod_quick_train.sh  runpod_start.sh  setup.sh  test_merged_model.py
src/finetune_project/: __init__.py  __main__.py  augmentation.py  cli.py  config.py  langchain_pipeline.py  prompt_templates.py  trainer.py
tests/: __init__.py  test_pipeline.py
